fixed alignment on login and song search screen

--- a/flask_react/src/components/Login.css
+++ b/flask_react/src/components/Login.css
@@ -1,6 +1,6 @@
 .Login {
     text-align: center;
-    margin-top: 75px;
+    margin-top: 80px;
 }
 
 .Login-link {
@@ -15,7 +15,7 @@ button.login_button{
     background-color: #b05236;
     border-radius: 15px;
     border: 2px solid #e2ebe5;
-    margin-top: 50px;
+    margin-top: 25px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: large;
@@ -33,13 +33,14 @@ button.login_button{
 .Examples {
     text-align: center;
     margin-top: 325px;
+    
 }
 
 h1 {
-    font-size: 75px;
+    font-size: large;
     color: #e2ebe5;
     font-weight: 100;
-    font-family: Arial, Helvetica, sans-serif sans-serif
+    font-family: Arial, Helvetica, sans-serif;
     
 }
 
